Import of DHORNE/File-Stat-OO-0.02 from CPAN.
gitpan-cpan-distribution: File-Stat-OO
gitpan-cpan-version:      0.02
gitpan-cpan-path:         DHORNE/File-Stat-OO-0.02.tar.gz
gitpan-cpan-author:       DHORNE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for File-Stat-OO
 
+0.02    02 September 2009
+        Added the owner and group functions
+
 0.01    Date/time
         First version, released on an unsuspecting world.
 
